# SmartCalc_v1.0

./: CMakeLists.txt  Makefile  README.md
MFile/: Makefile
banklib/: credit.c  credit.h  deposit.c  deposit.h
calclib/: calc.c  calc.h  parser.c  parser.h  stack.c  stack.h
doc/: dvi.txt
gnu/: main.cpp  window.cpp  window.h  window.ui
report/: coverage_report.calc.c.63c92f82f58b148056c3c095a819de54.html  coverage_report.credit.c.52b0b6ea5a252184c546c97f6a364240.html  coverage_report.deposit.c.22ad3379c7d6d83679519b55ec2cc0dc.html  coverage_report.html  coverage_report.parser.c.a4054f44b8ef1a0b96b8096f9cab1291.html  coverage_report.stack.c.c9b1247df67c9db2697347470f9af02c.html  coverage_report.tests.c.d1c5e1147bed4af84e1706716d207034.html  coverage_report.tests_calc.c.a5732d61170437feb397c884c8df8717.html  coverage_report.tests_credit.c.c54125202333856281597d1d8565321a.html  coverage_report.tests_deposite.c.ff1b5baa4b89d542986fa62a707a007f.html
tests/: tests.c  tests.h  tests_calc.c  tests_credit.c  tests_deposite.c
